--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,6 +13,7 @@ on:
       - FastMoq/**
       - FastMoq.Core/**
       - FastMoq.Web/**
+      - .github/workflows/pages.yml
       
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
