--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - master # Default release branch
+      - master # Release branch
     paths:
       - FastMoq/**
       - FastMoq.Core/**
