--- a/.github/workflows/publish_FastMoq.yml
+++ b/.github/workflows/publish_FastMoq.yml
@@ -6,9 +6,6 @@ on:
     branches:
       - master # Release branch
     paths:
-      - FastMoq/**
-      - FastMoq.Core/**
-      - FastMoq.Web/**
       - .github/workflows/publish_FastMoq.yml
       
 jobs:
@@ -28,9 +25,33 @@ jobs:
       # Publish
       - name: Build FastMoq
         run: dotnet build FastMoq-Release.sln -c Release
-      
-      - name: Creating a package
-        run: dotnet pack FastMoq-Release.sln --no-build -c Release -o .
 
-      - name: Publish to Nuget 
-        run: dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate -n 
+      - name: Fetch all tags
+        run: git fetch --tags
+
+      - name: Validate and set version
+        id: validate
+        run: |
+          TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+          VERSION=${TAG#v} # Remove 'v' from the beginning of the tag
+          if [[ $VERSION =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[0-9A-Za-z-]+(\.[0-9A-Za-z-]+)*)?(\+[0-9A-Za-z-]+(\.[0-9A-Za-z-]+)*)?$ ]]; then
+            echo "VERSION=$VERSION" >> $GITHUB_ENV
+          else
+            echo "Error: Latest tag ($TAG) is not a valid SemVer version"
+            exit 1
+          fi
+          
+      - name: Creating a package
+        run: dotnet pack FastMoq-Release.sln --no-build -c Release -o . /p:PackageVersion=${{ env.VERSION }}
+
+      - name: Push to NuGet
+        id: push
+        run: |
+          OUTPUT=$(dotnet nuget push *.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate)
+          echo "$OUTPUT"
+          if [[ $OUTPUT == *"Your package was pushed"* ]]; then
+            echo "Push successful"
+          else
+            echo "Push failed"
+            exit 1
+          fi
